--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "slugify": "^1.6.6"
   },
   "engines": {
     "node": ">=10.0.0"
