--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "prettier": "^3.5.3",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "validator": "^13.15.15"
   },
   "engines": {
     "node": ">=10.0.0"
