--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^7.0.3",
     "prettier": "^3.5.3",
     "slugify": "^1.6.6",
     "validator": "^13.15.15"
