--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.3",
     "prettier": "^3.5.3",
     "slugify": "^1.6.6",
-    "validator": "^13.15.15"
+    "validator": "^13.15.15",
+    "xss-clean": "^0.1.4"
   },
   "engines": {
     "node": ">=10.0.0"
