--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.3",
     "prettier": "^3.5.3",
+    "pug": "^3.0.3",
     "slugify": "^1.6.6",
     "validator": "^13.15.15",
     "xss-clean": "^0.1.4"
