--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.3",
     "prettier": "^3.5.3",
     "pug": "^3.0.3",
+    "sharp": "^0.34.4",
     "slugify": "^1.6.6",
     "validator": "^13.15.15",
     "xss-clean": "^0.1.4"
